hphp/test/zend/good/Zend/tests/errmsg_028.php.expectf

Fatal error: Cannot use `self` as a type name as it is reserved in %s/errmsg_028.php on line 3
